[project]
name = "metrics"
version = "1.0.0"
description = "CANFAR Science Platform Metrics Backend"
readme = "README.md"
authors = [
    { name = "Shiny Brar", email = "shiny.brar@nrc-cnrc.gc.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "niquests>=3.18.6",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
    "opentelemetry-sdk>=1.41.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Dual-package layout: `src/metrics` is the product surface; `.harness/harness`
# hosts the portable harness runtime so adapters (.codex, .cursor, .claude) can
# invoke `python -m harness` and `python -m harness.hooks.bridge` without
# exposing harness internals as a product API.
packages = ["src/metrics", ".harness/harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.2",
]
harness = [
    "pyyaml>=6.0.3",
    "pydantic>=2.13.1",
]
