[project]
name = "metrics"
version = "0.1.5"
description = "CANFAR Science Platform Metrics Backend"
readme = "README.md"
authors = [
    { name = "Shiny Brar", email = "shiny.brar@nrc-cnrc.gc.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
    "opentelemetry-sdk>=1.41.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.32",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metrics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 100
src = ["src/metrics", "tests"]

[tool.ruff.lint]
extend-select = [
    "D", # pydocstyle (Google: see [tool.ruff.lint.pydocstyle])
]
ignore = [
    "D203", # one-blank-line (conflicts with D211)
    "D213", # multi-line second line (conflicts with D212)
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
